--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>Countdown 100 : a Coding Project by Richard DeVore</title>
+    <title>Utrn me right round JS : a Coding Project by Richard DeVore</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -32,7 +32,7 @@
 <!-- ===== NAV Section ===== -->
 <nav class="navbar navbar-expand-md navbar-light fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand logoFont" href="index.html"><img src = "img/apple-touch-icon.png" class="d-inline-block align-text-top" width="30" height="24" alt="redz.cafe"> 100 Steps</a>
+        <a class="navbar-brand logoFont" href="index.html"><img src = "img/apple-touch-icon.png" class="d-inline-block align-text-top" width="30" height="24" alt="redz.cafe">   Uturn Arrays</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -43,7 +43,7 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="app.html">Countdown 100</a>
+                    <a class="nav-link" href="app.html">The App</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="code.html">The Code</a>
@@ -64,8 +64,9 @@
        <div class="container col-xxl-8 px-4 py-5">
            <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
                 <div class="col order-last order-lg-first">
-                    <h1 class="display-5" fw-bold lh-1 mb-3>100 Steps : A Coding Project</h1>
-                    <h4 class="lead"> A Javascript Coding Project - displaying numbers from 0 to 100 with even numbers in <strong>BOLD</strong></h4>
+                    <h1 class="display-5 lh-1 mb-3">Uturn me right round Js Array</h1>
+                         <h2>- A Coding Project</h2>
+                    <h4 class="lead"> A Javascript Coding exercise using arrays which displays a string in reverse.</h4>
                     <ul class="fa-ul pt-2 checklist">
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS & Bootstap Layout</li>
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Fundamentals</li>
@@ -90,8 +91,8 @@
                         </div>
                     </h5>
                  </div>
-                <div class="col">
-                    <img src="img/Hundred-to-one-project-image.jpg" alt="Hundo App Logo" class="img-fluid center-block d-block mx-auto" width="700" height="500">
+                <div class="col d-flex align-content-center">
+                    <img src="img/Uturn-jsArrary-Rewind.jpg" alt="Uturn me right round JsArray App Logo" class="img-fluid center-block d-block mx-auto" width="700" height="500">
                  </div>
 
             </div>
